--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 body {
-  font-size: 41px;
-  background-color: #b0a3f0;
+  font-size: 42px;
+  background-color: #281877;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
